V 0.3.7
=======
- New features:
	- New features in existing functions:
		- In dates identifications, we added time zones (%z) to make it even more generic. (Note that it isn't yet very robust so some formats might not be detected.)
		- In dates identifications, we make it faster by computing search of format only on unique values.
	- New functions:
		- Functions *as.Date.fast*, *as.POSIXct.fast* and *parse_date_time.fast* are now available. They help to transform dates way faster (if the same date value is present multiple times in the column. 

- Bug fixes:
	- Control that over-allocate option is activated on every data.table to avoid issues with set. Package should be more robust.

-Code quality:
	- Improving code quality using lintr
	- Suppressing some useless code
	- Meeting new covr standard

V 0.3.6
=======
- Bug fixes:
	- *identifyDates* had a weird bug. Solved
	
- Integration:
	- Making dataPreparation compatible with testthat 2.0.0
	
V 0.3.5
=======
- New features:
	- New features in existing functions:
		- *findAndTransFormDates* now as an *ambiguities* parameter, IGNORE to work as before, WARN to check for ambiguities and print them, SOLVE to try to solve ambiguities on more lines.
		- *one_hot_encoder* now uses a *build_encoding* functions to be able to build same encoding on train and on test.
		- *aggregateByKey* is now way faster on numerics. But it changed the way it gets input functions.
		- *fastScale* now as a *way* parameter which allow you to either scale or unscale. Unscaling numeric values can be very usefull for most post-model analysis.
		- *setColAsDate* now accept multiple formats in a single call.
	- New functions:
		- *build_encoding* build a list of encoding to be used by *one_hot_encoder*, it also has a parameter *min_frequency* to control that rare values doesn't result in new columns.
		- Previously private function *identifyDates* is now exported. To be able to perform same transformation on train and on test.