@@ -1,8 +1,7 @@
 # Generated by roxygen2: do not edit by hand
 
-S3method(as.Date,fast)
-S3method(as.POSIXct,fast)
 export(aggregateByKey)
+export(as.POSIXct_fast)
 export(build_bins)
 export(build_encoding)
 export(build_scales)
@@ -23,7 +22,6 @@ export(generateFromCharacter)
 export(generateFromFactor)
 export(identifyDates)
 export(one_hot_encoder)
-export(parse_date_time.fast)
 export(prepareSet)
 export(sameShape)
 export(setAsNumericMatrix)
